--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "mongoose":"^7.0.3",
+    "express":"^4.18.2",
+    "express-handlebars":"^7.0.1"
   }
 }
