--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "mongoose":"^7.0.3",
     "express":"^4.18.2",
-    "express-handlebars":"^7.0.1"
+    "express-handlebars":"^7.0.1",
+    "socket.io":"^4.6.1"
   }
 }
