--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongoose":"^7.0.3",
-    "express":"^4.18.2",
-    "express-handlebars":"^7.0.1",
-    "socket.io":"^4.6.1"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.0.1",
+    "mongoose": "^7.0.3",
+    "mongoose-paginate-v2": "^1.7.1",
+    "socket.io": "^4.6.1"
   }
 }
