--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "connect-mongo":"^5.0.0",
-    "cookie-parser":"^1.4.6",
+    "connect-mongo": "^5.0.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.1",
-    "express-session":"^1.17.3",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "mongoose-paginate-v2": "^1.7.1",
-    "socket.io": "^4.6.1",
     "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
-    "passport-github2": "^0.1.12"
+    "socket.io": "^4.6.1"
   }
 }
