agregado de toda la doc de productos

--- a/docs/routes/products/createProduct.yaml
+++ b/docs/routes/products/createProduct.yaml
@@ -1,7 +1,7 @@
 paths:
-  /products:
+  /api/products:
     post:
-      summary: Creates a new product
+      summary: Creates a new product  -- LOGIN REQUIRED - Premium or Admin only 
       tags:
         - Products
       requestBody:
