--- a/docs/routes/tags.yaml
+++ b/docs/routes/tags.yaml
@@ -1,3 +1,5 @@
 tags:
-  name: Products
-  description: API to manage products.
+  - name: Products
+    description: API to manage products.
+  - name: Carts
+    description: API to manage products.
