--- a/docs/products/schemas/PaginatedProduct.yaml
+++ b/docs/products/schemas/PaginatedProduct.yaml
@@ -37,10 +37,14 @@ components:
           description: Indicates the number of products displayed on each page
       example:      
         payload: 
-          id: h58sk-sk85d-dl96m-3658fn
-          title: tortita
-          price: 50.78
-          thumbnail: [http://photo.url.png , http://photo2.url.png]
+          - id: h58sk-sk85d-dl96m-3658fn
+            title: tortita
+            price: 50.78
+            thumbnail: [http://photo.url.png , http://photo2.url.png]
+          - id: sk85d-3658fn-sk85d-3658fn
+            title: pan
+            price: 90.00
+            thumbnail: [http://photo.url.png , http://photo2.url.png]
         totalPages: 1
         prevPage: null
         nextPage: null
