--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "src/main.js",
   "scripts": {
     "start": "node .",
-    "test": "nodemon -e 'js' .e"
+    "test": "nodemon -e 'js' .e",
+    "testMocha": "mocha test/**/*.test.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "express-handlebars": "^7.0.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
+    "mocha": "^10.2.0",
     "mongoose": "^7.0.3",
     "mongoose-paginate-v2": "^1.7.1",
     "nodemailer": "^6.9.3",
@@ -32,6 +34,7 @@
     "winston": "^3.9.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.0.2"
+    "@faker-js/faker": "^8.0.2",
+    "@types/mocha": "^10.0.1"
   }
 }
