--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
-    "@types/mocha": "^10.0.1"
+    "@types/mocha": "^10.0.1",
+    "chai": "^4.3.7",
+    "supertest": "^6.3.3"
   },
-  "mocha":{
-    "timeout" : 20000
+  "mocha": {
+    "timeout": 20000
   }
 }
