--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.6.1",
     "swagger-jsdoc": "^6.2.8",
