Agregado de documentacion sobre manejo de usuarios, limpieza de servidor.js

--- a/docs/tags.yaml
+++ b/docs/tags.yaml
@@ -1,4 +1,8 @@
 tags:
+  - name: Users
+    description: API to manage users.
+  - name: Sessions
+    description: API to manage sessions.
   - name: Products
     description: API to manage products.
   - name: Carts
