--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "socket.io": "^4.6.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
+    "multer": "^1.4.5-lts.1",
     "winston": "^3.9.0"
   },
   "devDependencies": {
