--- a/docs/users/routes/passwords.yaml
+++ b/docs/users/routes/passwords.yaml
@@ -3,7 +3,7 @@ paths:
     post:
       summary: Send email with instructions to create a new password. 
       tags:
-        - Sessions
+        - Users - Sessions
       requestBody:
         required: true
         content:
@@ -19,7 +19,7 @@ paths:
     post:
       summary: Sending new password, email and token provided by server, allows to set new password. 
       tags:
-        - Sessions
+        - Users - Sessions
       requestBody:
         required: true
         content:
